syntax = "proto3";

package organization.v1;

option go_package = "github.com/fundament-oss/fundament/organization-api/pkg/proto/gen/v1;organizationv1";

// PluginService provides information about available plugins
service PluginService {
  // List all available plugins
  rpc ListPlugins(ListPluginsRequest) returns (ListPluginsResponse);
}

// Tag information
message Tag {
  string id = 10;
  string name = 20;
}

// Category information
message Category {
  string id = 10;
  string name = 20;
}

// Plugin information
message Plugin {
  string id = 10;
  string name = 20;
  string description = 30;
  repeated Tag tags = 40;
  repeated Category categories = 50;
}

// List plugins request
message ListPluginsRequest {}

// List plugins response
message ListPluginsResponse {
  repeated Plugin plugins = 10;
}
